Handle double options without description
I think the oneof type isn't entirely correct but the generated python type works.
We should investigate setting the inner to be "string | null" without breaking
the generated type.
